# cleared-direct

./: .gitignore  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
animation/: index.html
apps/aircraft/: admin.py  apps.py  models.py
apps/aircraft/migrations/: 0001_initial.py  0002_alter_aircrafttype_table.py
apps/audio/: admin.py  apps.py  models.py
apps/audio/migrations/: 0001_initial.py  0002_alter_atcaudioclip_table.py
apps/flights/: admin.py  apps.py  engine.py  models.py  strings.py  urls.py  views.py
apps/flights/migrations/: 0001_initial.py  0002_alter_eventqueueitem_table_alter_flightsession_table_and_more.py  0003_flightsession_language.py
apps/scenarios/: admin.py  apps.py  models.py
apps/scenarios/management/commands/: flush_ifr.py  load_all_scenarios.py  load_scenario.py  seed.py
apps/scenarios/migrations/: 0001_initial.py  0002_alter_scenariotemplate_table.py
config/: settings.py  urls.py
docs/: audio-recording-guide.md
docs/test-guides/: 01-student-day-vfr-kocf.md  02-private-ifr-ksgj.md  03-ifr-prof-hold-korl.md  04-checkride-hell-kjax.md
fixtures/scenarios/: checkride_hell_kjax.yaml  ifr_prof_hold_korl.yaml  night_ifr_kojm.yaml  private_ifr_ksgj.yaml  student_day_vfr_kocf.yaml
fixtures/strings/: en.yaml  es.yaml
gfc700/: index.html
gtn750/: index.html
pfd/: index.html
templates/: base.html
templates/flights/: index.html  session.html
tests/: conftest.py  test_e2e_scenarios.py  test_engine.py  test_models.py  test_views.py
